jade news angular

--- a/front/src/main/webapp/jade/includes/scripts.jade
+++ b/front/src/main/webapp/jade/includes/scripts.jade
@@ -4,3 +4,6 @@ script(src='bower_components/pickadate/lib/compressed/picker.js')
 script(src='bower_components/pickadate/lib/compressed/picker.date.js')
 script(src='bower_components/pickadate/lib/compressed/translations/es_ES.js')
 script(src='js/scripts.js')
+script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js')
+script(src='js/main.js')
+script(src='js/controllers.js')
