--- a/front/src/main/webapp/jade/news.jade
+++ b/front/src/main/webapp/jade/news.jade
@@ -114,7 +114,7 @@ html.no-js
 					h2.date: <i class='fa fa-calendar-o'></i><span>Hoy</span>, 24 de Septiembre 2014
 					
 					ul
-						li(ng-repeat='new in newsb').element
+						li(ng-repeat='new in newsa').element
 							header.cf
 								
 								.pic
