--- a/front/src/main/webapp/jade/news.jade
+++ b/front/src/main/webapp/jade/news.jade
@@ -111,7 +111,7 @@ html.no-js
 
 
 				.panel-news-listing: .container
-					h2.date: <i class='fa fa-calendar-o'></i><span>Hoy</span>, 24 de Septiembre 2014
+					h2.date: <i class='fa fa-calendar-o'></i><span>Hoy</span>, {{ newsaDay }} de {{ newsaMonth }} {{ newsaYear }}
 					
 					ul
 						li(ng-repeat='new in newsa').element
@@ -173,12 +173,9 @@ html.no-js
 
 							.tags-array.cf
 								ul
-									li
-										a(href='#').tag-cat-line.green Finanzas
-									li
-										a(href='#').tag-cat-line.orange Comercio
-									li
-										a(href='#').tag-cat-line.blue General
+									li(ng-repeat='etiqueta in new.etiquetas')
+										a(href='#',class='tag-cat-line {{ etiqueta.color }}') {{ etiqueta.valor }}
+									
 
 				.panel-news-listing: .container
 					h2.date: <i class='fa fa-calendar'></i><span>Anteriores</span>
