links news front end

--- a/front/src/main/webapp/jade/news.jade
+++ b/front/src/main/webapp/jade/news.jade
@@ -118,10 +118,10 @@ html.no-js
 							header.cf
 								
 								.pic
-									a(href='#')
+									a(href='{{ new.url }}')
 										img(src='img/news-thumbs/3.jpg')
 								.title
-									a(href='#') {{ new.titulo }}
+									a(href='{{ new.url }}') {{ new.titulo }}
 
 							.content
 								p {{ new.descripcion }}
@@ -130,7 +130,7 @@ html.no-js
 								.source
 									a(href='#')
 										i.fa.fa-rss
-										span {{ new.titulo }}
+										span {{ new.fuente }}
 
 								.source-link
 									a(href='{{ new.url }}').link Ver nota
@@ -149,10 +149,10 @@ html.no-js
 							header.cf
 								
 								.pic
-									a(href='#')
+									a(href='{{ new.url }}')
 										img(src='img/news-thumbs/2.jpg')
 								.title
-									a(href='#') {{ new.titulo }}
+									a(href='{{ new.url }}') {{ new.titulo }}
 
 							.content
 								p {{ new.descripcion }}
@@ -161,7 +161,7 @@ html.no-js
 								.source
 									a(href='#')
 										i.fa.fa-rss
-										span {{ new.titulo }}
+										span {{ new.fuente }}
 
 								.source-link
 									a(href='{{ new.url }}').link Ver nota
@@ -181,10 +181,10 @@ html.no-js
 							header.cf
 								
 								.pic
-									a(href='#')
+									a(href='{{ new.url }}')
 										img(src='img/news-thumbs/1.jpg')
 								.title
-									a(href='#') {{ new.titulo }}
+									a(href='{{ new.url }}') {{ new.titulo }}
 
 							.content
 								p {{ new.descripcion }}
@@ -193,7 +193,7 @@ html.no-js
 								.source
 									a(href='#')
 										i.fa.fa-rss
-										span {{ new.titulo }}
+										span {{ new.fuente }}
 
 								.source-link
 									a(href='{{ new.url }}').link Ver nota
