--- a/front/src/main/webapp/jade/index.jade
+++ b/front/src/main/webapp/jade/index.jade
@@ -32,7 +32,7 @@ html.no-js
 					
 
 			section.main-container
-				.main-container-overlay
+				+container-overlay
 
 				.panel-header-summary
 					.container
