--- a/front/src/main/webapp/jade/mixins.jade
+++ b/front/src/main/webapp/jade/mixins.jade
@@ -1,5 +1,8 @@
 //- mixins
 
+mixin container-overlay
+	.main-container-overlay.js-main-container-overlay
+
 mixin get-new
 	-var newIndex = Math.floor((Math.random() * 6) + 1);
 	-var newsTitles = { 1: 'Competencia desleal genera pérdidas de 60% a industria textil', 2: 'Tepeji del Río, potencia textilera', 3: 'Repartirá Concurso Artesanal Textil 215 mil pesos en premios', 4: 'Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012', 5: 'Universidades, respuesta a necesidades regionales', 6: 'Inversión se concentra en Pachuca, Zempoala y Tula' }
