--- a/front/src/main/webapp/sass/styles.sass
+++ b/front/src/main/webapp/sass/styles.sass
@@ -12,6 +12,7 @@
 // my init
 @import "init"
 @import "tags"
+@import "forms"
 
 // modules
 @import "ui"
@@ -19,6 +20,7 @@
 @import "login"
 @import "dashboard"
 @import "news"
+@import "question"
 
 
 //+edit()
