--- a/front/src/main/webapp/jade/includes/header.jade
+++ b/front/src/main/webapp/jade/includes/header.jade
@@ -6,9 +6,10 @@ label(for='activate-menu', class='btn-alpha btn-activate-menu')
 	i.fa.fa-bars
 	| Menú
 
-label(for='activate-alerts', class='btn-alpha btn-activate-alerts')
+label(for='activate-notification', class='btn-alpha btn-activate-notification')
 	i.fa.fa-bell-o
 	| Alertas
+	span.count 2
 
 input(type='checkbox', id='activate-menu', class='activate-menu')
-input(type='checkbox', id='activate-alerts', class='activate-alerts')
+input(type='checkbox', id='activate-notification', class='activate-notification')
