--- a/front/src/main/webapp/jade/login-service.jade
+++ b/front/src/main/webapp/jade/login-service.jade
@@ -8,7 +8,7 @@ html(ng-app)
 	body
 		.login-head
 			
-			h1 aie
+			h1 site
 			h2 Sistema de Inteligencia y Tecnología Empresarial
 
 		.login-form
@@ -16,7 +16,7 @@ html(ng-app)
 			.title
 				h3 Bienvenido
 
-			form(action='index.html')
+			form(action='http://infra1.cloudapp.net:8080/front-1.0-SNAPSHOT/api/v1/user/login', method='POST')
 				fieldset.wi
 					input(type='text', name='identity', placeholder='Nombre de Usuario')
 					i.fa.fa-user
@@ -29,11 +29,11 @@ html(ng-app)
 					i.fa.fa-spinner.fa-spin
 
 				fieldset.action
-					button(type='submit').btn Ingresar
+					button(type='submit').btn Ingresar al SITE
+						i.fa.fa-chevron-right
 
-				//-
-					fieldset.error
-						span Nombre del error
+				fieldset.error
+					span Nombre del error
 
 		script(src='bower_components/jquery/dist/jquery.js')
 		script(src='bower_components/angular/angular.min.js')
