--- a/front/src/main/webapp/jade/news.jade
+++ b/front/src/main/webapp/jade/news.jade
@@ -11,19 +11,19 @@ html.no-js
 			
 			nav.main-nav
 				ul.nav-listing
-					li: a(href='#')
+					li.selected: a(href='index.html')
 						span.icon
 						span.tag Dashboard de inicio
-					li.selected: a(href='#')
+					li: a(href='actualidad.html')
 						span.icon
 						span.tag Actualidad de la industria
-					li: a(href='#')
+					li: a(href='question.html')
 						span.icon
 						span.tag Perfil
-					li: a(href='#')
+					li: a(href='alerts.html')
 						span.icon
 						span.tag Alertas y notifiaciones
-					li: a(href='#')
+					li: a(href='ic.html')
 						span.icon
 						span.tag Inteligencia comercial
 					li: a(href='#')
