--- a/front/src/main/webapp/jade/question-2.jade
+++ b/front/src/main/webapp/jade/question-2.jade
@@ -50,8 +50,8 @@ html.no-js
 				.panel-question-tabs
 					.container
 						ol
-							li.selected: a(href='question.html'): span Economía
-							li: a(href='question-2.html'): span Producción
+							li: a(href='question.html'): span Economía
+							li.selected: a(href='question-2.html'): span Producción
 							li: a(href='#'): span Comercial
 							li: a(href='#'): span Innovación y Tecnología
 							li: a(href='#'): span Administración
@@ -61,8 +61,8 @@ html.no-js
 					.container
 						.panel-question-container
 							header
-								h2 Economía
-								p 12 de 13 preguntas contestadas
+								h2 Producción
+								p 4 de 17 preguntas contestadas
 
 							fieldset
 								dl.question
@@ -111,8 +111,7 @@ html.no-js
 						.action
 							.half
 								.left
-									br
-
+									a(href='question.html').btn.alt <i class='fa fa-chevron-left'></i> Anterior
 								.right
 									a(href='question-2.html').btn Siguiente <i class='fa fa-chevron-right'></i>
 	
