--- a/front/src/main/webapp/sass/_news.sass
+++ b/front/src/main/webapp/sass/_news.sass
@@ -3,8 +3,10 @@
 	
 	.filter-bar
 		@extend %cf
-		//border: 1px solid $lightgray
-		//padding: 5px
+	
+	.btn-set
+		a
+			margin-right: 10px
 
 	form
 		float: right
@@ -31,6 +33,7 @@
 		right: 0
 		background-color: white
 		width: 220px
+		z-index: 120
 
 		h3
 			+bariol
