--- a/front/src/main/webapp/sass/_question.sass
+++ b/front/src/main/webapp/sass/_question.sass
@@ -1,3 +1,14 @@
+.panel-question-all-blocks-container
+	.action
+		padding: $spacer 0
+	.half
+		.left
+
+
+		.right
+			text-align: right
+
+
 .panel-question-bar
 	padding: $spacer 0
 	.left
@@ -54,9 +65,16 @@
 
 
 .panel-question-container
-	h2
-		font-size: 1.5em
+	header
 		margin-bottom: $spacer
+		h2
+			font-size: 1.6em
+			display: inline-block
+			border-bottom: 2px solid $lightgray
+			padding-bottom: $spacer/4
+			margin-bottom: $spacer/2
+		p
+			font-size: 0.7em
 
 
 @media screen and (max-width: 640px)
