--- a/front/src/main/webapp/sass/_ui.sass
+++ b/front/src/main/webapp/sass/_ui.sass
@@ -1,7 +1,7 @@
 // buttons config
 .btn
 	background-color: $blue
-	color: white
+	color: white !important
 	padding: $spacer/4 $spacer
 	cursor: pointer
 	+fx
