--- a/front/src/main/webapp/sass/styles.sass
+++ b/front/src/main/webapp/sass/styles.sass
@@ -21,6 +21,7 @@
 @import "dashboard"
 @import "news"
 @import "question"
+@import "alerts"
 
 
 //+edit()
@@ -83,7 +84,12 @@
 
 
 
+.iframe-container
+	iframe
+		background-color: $lightgray
 
 
 
-
+.panel-dummy-image
+	img
+		width: 100%
