--- a/front/src/main/webapp/jade/mixins.jade
+++ b/front/src/main/webapp/jade/mixins.jade
@@ -15,7 +15,7 @@ mixin get-new
 		header.cf
 			
 			.pic
-				a(href='#')
+				a(href='view-new.html')
 					img(src='img/news-thumbs/#{newIndex}.jpg')
 			.title
 				a(href='#')= newsTitles[newIndex]
@@ -41,3 +41,28 @@ mixin get-new
 					a(href='#').tag-cat-line.orange Comercio
 				li
 					a(href='#').tag-cat-line.blue General
+
+
+mixin get-new-widget
+	-var newIndex = Math.floor((Math.random() * 6) + 1);
+	-var newsTitles = { 1: 'Competencia desleal genera pérdidas de 60% a industria textil', 2: 'Tepeji del Río, potencia textilera', 3: 'Repartirá Concurso Artesanal Textil 215 mil pesos en premios', 4: 'Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012', 5: 'Universidades, respuesta a necesidades regionales', 6: 'Inversión se concentra en Pachuca, Zempoala y Tula' }
+	-var newsDesc = { 1: 'Algunos talleres que hace cinco o seis años tenían 20 empleados, hoy tienen la mitad.', 2: 'Tepeji del Río es uno de los municipios que en el sector textil es de los productores más importantes en México y de América Latina.', 3: 'Una bolsa económica de 215 mil pesos será distribuida entre las mujeres bordadoras que obtengan los primeros lugares en el Concurso', 4: 'El titular de la SEDECO José Pablo Maauad dijo que los principales productos que se exportan son carros, partes de ferrocarril y remolques.', 5: 'Tecnológicas de Hidalgo desarrollarán investigación e innnovación en las áreas de metal-mecatrónica y energías alternativas.', 6: 'Hay recursos por alrededor de 70 mdp.' }
+	
+	-var newSourceIndex = Math.floor((Math.random() * 5) + 1);
+	-var newSources = { 1: 'milenio.com', 2: 'eleconomista.com', 3: 'eluniversal.com.mx', 4: 'elfinanciero.com', 5: 'terra.com'}
+
+	li.element
+		.content.cf
+			.pic
+				a(href='view-new.html')
+					img(src='img/news-thumbs/#{newIndex}.jpg')
+			.title
+				a(href='view-new.html')= newsTitles[newIndex]
+			
+		footer.info.cf
+			ul
+				li.source
+					a(href='#')
+						i.fa.fa-rss
+						span= newSources[newSourceIndex]
+				li.date 10-Feb-2014
