--- a/front/src/main/webapp/sass/_forms.sass
+++ b/front/src/main/webapp/sass/_forms.sass
@@ -43,6 +43,17 @@
 		&:focus
 			border-color: $gray
 
+	select
+		+fx
+		+reset-appearance
+		border: 1px solid $lightgray
+		font-family: inherit
+		padding: 10px 5px
+		width: 100%
+		color: $gray
+		font-size: 1.2em
+		border-radius: 0
+
 
 .input-radio
 
